<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Times">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="All Sleep Cycle Completing Times"
                android:textAlignment="center"
                android:fontFamily="@font/baloo"
                android:textColor="@color/text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/hour1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00"
                        android:textColor="#1589FF"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#1589FF"
                        android:text="@string/dot"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/minute1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00"
                        android:textColor="#1589FF"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textColor="#1589FF"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/ampm1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/am"
                        android:textColor="#1589FF"
                        android:textSize="22sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/hour2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00"
                        android:textColor="#157DEC"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textColor="#157DEC"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/minute2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00"
                        android:textColor="#157DEC"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textColor="#157DEC"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/ampm2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/am"
                        android:textColor="#157DEC"
                        android:textSize="22sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/hour3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00"
                        android:textColor="#1589FF"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textColor="#157DEC"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/minute3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00"
                        android:textColor="#1589FF"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textColor="#1589FF"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/ampm3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/am"
                        android:textColor="#1589FF"
                        android:textSize="22sp" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Best times to wake up"
                android:textAlignment="center"
                android:fontFamily="@font/baloo"
                android:textColor="#8BC34A"
                android:textSize="20sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/hour4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00"
                        android:textColor="#3F51B5"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textColor="#3F51B5"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/minute4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00"
                        android:textColor="#3F51B5"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textColor="#3F51B5"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/ampm4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/am"
                        android:textColor="#3F51B5"
                        android:textSize="22sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/hour5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00"
                        android:textColor="#9C27B0"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textColor="#673AB7"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/minute5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00"
                        android:textColor="#673AB7"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textColor="#673AB7"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/ampm5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/am"
                        android:textColor="#673AB7"
                        android:textSize="22sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/hour6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00"
                        android:textColor="#0D1770"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textColor="#0D1770"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/minute6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00"
                        android:textColor="#0D1770"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textColor="#0D1770"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/ampm6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/am"
                        android:textColor="#0D1770"
                        android:textSize="22sp" />

                </LinearLayout>


            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="8"
                android:layout_marginTop="16sp"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:id="@+id/myTaskButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="7"
                    android:background="@color/teal_200"
                    android:clickable="true"
                    android:elevation="10dp"
                    android:focusable="true"
                    android:foreground="?android:selectableItemBackground"
                    android:textAlignment="center"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/baloo"
                        android:gravity="center"
                        android:text="My Task"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/addTaskButton"
                    android:layout_width="20dp"
                    android:layout_height="40dp"
                    android:background="@color/teal_200"
                    android:layout_gravity="center"
                    app:cardCornerRadius="300dp"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:clickable="true"
                    android:foreground="?android:selectableItemBackground"
                    android:focusable="true"
                    android:elevation="10dp"
                    app:cardElevation="10dp"
                    android:textAlignment="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_margin="4dp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/baloo"
                        android:textSize="20sp"
                        android:textColor="@color/text"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:text="+"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="100dp"
                android:elevation="20dp"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                app:cardElevation="20dp"
                android:layout_height="wrap_content"
                android:focusable="true">

                <ImageView
                    android:id="@+id/alarmImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:foreground="?android:selectableItemBackground"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/ic_alarm_clock_svgrepo_com"
                    android:focusable="true" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3532725936688615/9602607714"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>